--- a/.github/workflows/CI-actions.yaml
+++ b/.github/workflows/CI-actions.yaml
@@ -32,5 +32,4 @@ jobs:
     #    flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test Code
       run: |
-        test_dir=calcalc
-        pytest ${testdir}/. -v
+        pytest -v
