--- a/.github/workflows/CI-actions.yaml
+++ b/.github/workflows/CI-actions.yaml
@@ -23,7 +23,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
-        python -m pip install -e .
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     #- name: Lint with flake8
     #  run: |
@@ -31,6 +30,9 @@ jobs:
     #    flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
     #    # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
     #    flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Install package in virtual env
+      run: |
+        python -m pip install -e .
     - name: Test Code
       run: |
         pytest -v
